<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/greenback"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
       >

        <TextView
            android:id="@+id/tv_xyz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:text="Registration Area"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="serif"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="16dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_name"
                        android:inputType="textPersonName"
                        android:maxLength="30"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>
                </android.support.design.widget.TextInputLayout>

                <RadioGroup
                    android:id="@+id/rggender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdomale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="Male"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>

                    <android.support.v7.widget.AppCompatRadioButton
                        android:id="@+id/rdofemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Female"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>
                </RadioGroup>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/address_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/address_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/label_address"
                        android:maxLength="100"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>
                </android.support.design.widget.TextInputLayout>


                <Spinner
                    android:id="@+id/spnstate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </Spinner>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/city_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/city_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_city"
                        android:inputType="text"
                        android:maxLength="30"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_email"
                        android:inputType="textEmailAddress"
                        android:maxLength="50"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/contactno_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/contactno_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_contactno"
                        android:inputType="number"
                        android:maxLength="10"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/password_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_password"
                        android:inputType="textPassword"
                        android:maxLength="10"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/save_button"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="@string/label_save"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>

                    <android.support.design.button.MaterialButton
                        android:id="@+id/cancel_button"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"

                        android:text="@string/label_cancel"
                        android:textStyle="bold"
                        android:fontFamily="serif"/>
                </LinearLayout>
            </LinearLayout>

        </android.support.design.card.MaterialCardView>
    </ScrollView>
</LinearLayout>