<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/greenback"
    tools:context=".FarmerallpyforstorageActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="#000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:fontFamily="serif"
            android:text="Apply for storage"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:padding="16dp">

                <Spinner
                    android:id="@+id/spnproduct"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Spinner>

                <ImageView
                    android:id="@+id/img_img"
                    android:layout_width="100dp"
                    android:visibility="gone"
                    android:layout_height="100dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/quantity_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/quantity_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:hint="@string/label_quantity"
                        android:inputType="number"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/prate_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/prate_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:fontFamily="serif"
                        android:hint="@string/label_prate"
                        android:inputType="number"
                        android:text="0"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spnapplyfor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </Spinner>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/srate_text_input"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/srate_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:fontFamily="serif"
                        android:hint="@string/label_srate"
                        android:inputType="number"
                        android:text="0"
                        android:textStyle="bold" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <android.support.design.button.MaterialButton
                        android:id="@+id/save_button"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:fontFamily="serif"
                        android:text="@string/label_save"
                        android:textStyle="bold" />

                    <android.support.design.button.MaterialButton
                        android:id="@+id/cancel_button"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="16dp"
                        android:fontFamily="serif"
                        android:text="@string/label_cancel"
                        android:textStyle="bold" />
                </LinearLayout>


            </LinearLayout>
        </android.support.design.card.MaterialCardView>
    </LinearLayout>
</LinearLayout>